--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,3 +29,10 @@ main {
     background-image: url('../imagens/frame-iphone.png');
     background-repeat: no-repeat;
 }
+iframe#tela {
+    position: relative;
+    top: 79px;
+   left: 22px;
+   width: 267px;
+   height: 473px;
+}
